02_code1/grade.txt
Grading at Sat Sep 19 07:02:18 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:17:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main() {
 ^
temp.c:17:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main() {
     ^
temp.c:25:1: error: expected declaration or statement at end of input
 }
 ^
temp.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
